<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">geo.optimal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="localizar">Localizar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="mala">Mala</string>
    <string name="buena">Buena</string>
    <string name="excelente">Excelente</string>
    <string name="description">Descripcion</string>
    <string name="descripcion">Ingrese Description</string>
    <string name="title_activity_results">Results</string>
    <string name="result">resultados</string>
    <string name="results">Resultados muestra</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="calificacion">Calificacion</string>
    <string name="error">Error</string>
    <string name="satelites">Satelites</string>
    <string name="proveedor">proveedor</string>
    <string name="cond_provider">Con_provider</string>
    <string name="title_activity_muestra">Muestra</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="title_activity_estadisticas">Estadisticas</string>
    <string name="porcentaje_precision_malas">Porcentaje de precision malas</string>
    <string name="porcentaje_precision_buenas">Porcentaje de precision buenas</string>
    <string name="porcentaje_precision_excelente">Porcentaje de precision excelente</string>
    <string name="cantidad_satelites_muestras_buenas">Cantidad de satelites en muestras buenas</string>
    <string name="cantidad_satelites_muestras_malas">Cantidad de satelites en muestras malas</string>
    <string name="cantidad_satelites_muestras_excelentes">Cantidad de satelites en muestras excelentes</string>
    <string name="total_satelites_muestas">"Total satelites "</string>
    <string name="porcentaje_satelites_muestras_malas">Porcentaje satelites muestras malas</string>
    <string name="porcentaje_satelites_muestras_buenas">Porcentaje satelites muestras buenas</string>
    <string name="porcentaje_satelites_muestras_excelentes">Porcentaje satelites muestras excelentes</string>
    <string name="proveedor_gps_muestas_malas">Proveedor GPS en muestras malas</string>
    <string name="proveedor_newtork_muestras_malas">Proveedor Network muestras malas</string>
    <string name="proveedor_gps_muestras_buenas">Proveedor GPS muestras buenas</string>
    <string name="proveedor_network_muestras_buenas">Proveedor Network muestras buenas</string>
    <string name="proveedor_gps_muestras_excelentes">Proveedor GPS muestras excelentes</string>
    <string name="proveedor_network_muestras_excelentes">Proveedor Network en muestras excelentes</string>
    <string name="cantidad_gps">Uso de GPS</string>
    <string name="cantidad_network">Uso Network</string>
    <string name="porcentaje_gps_muestras_malas">Porcentaje GPS muestras malas</string>
    <string name="porcentaje_network_muestras_malas">Porcentaje Network muestras malas</string>
    <string name="porcentaje_gps_muestras_buenas">Porcentaje GPS muestras buenas</string>
    <string name="porcentaje_network_muestras_buenas">Porcentaje Network muestras buenas</string>
    <string name="porcentaje_gps_muestras_excelentes">Porcentaje GPS muestras excelentes</string>
    <string name="porcentaje_network_muestras_excelentes">Porcentaje Network muestras excelentes</string>
    <string name="total_imprecision_promedios">Total de imprecision para sacar promedios</string>
    <string name="precision_muestras_excelentes">Precision muestras excelentes</string>
    <string name="precision_muestras_buenas">Precision muestras buenas</string>
    <string name="precision_muestras_malas">Precision muestras malas</string>
    <string name="porcentaje_muestras_excelentes">Porcentaje muestras excelentes</string>
    <string name="porcentaje_muestras_buenas">Porcentaje muestras buenas</string>
    <string name="porcentaje_muestras_malas">Porcentaje muestras malas</string>
    <string name="cantidad_muestras_excelentes">Cantidad muestras excelentes</string>
    <string name="cantidad_muestras_buenas">Cantidad muestras buenas</string>
    <string name="cantidad_muestras_malas">Cantidad muestras malas</string>
    <string name="desc_column">Variable</string>
    <string name="value_column">Valor</string>

</resources>