<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Estadisticas" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/muestras_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_muestras_malas" />

        <TextView
            android:id="@+id/muestras_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_muestras_buenas" />

        <TextView
            android:id="@+id/muestras_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_muestras_excelentes" />

        <TextView
            android:id="@+id/porcentaje_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_muestras_malas" />

        <TextView
            android:id="@+id/porcentaje_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_muestras_buenas" />

        <TextView
            android:id="@+id/porcentaje_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_muestras_excelentes" />

        <TextView
            android:id="@+id/precision_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precision_muestras_malas" />

        <TextView
            android:id="@+id/precision_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precision_muestras_buenas" />

        <TextView
            android:id="@+id/precision_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precision_muestras_excelentes" />

        <TextView
            android:id="@+id/imprecision_promedios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_imprecision_promedios" />

        <TextView
            android:id="@+id/porcentaje_precision_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_precision_malas" />

        <TextView
            android:id="@+id/porcentaje_precision_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_precision_buenas" />

        <TextView
            android:id="@+id/porcentaje_precision_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_precision_excelente" />

        <TextView
            android:id="@+id/satelites_muestras_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_satelites_muestras_malas" />

        <TextView
            android:id="@+id/satelites_muestras_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_satelites_muestras_buenas" />

        <TextView
            android:id="@+id/satelites_muestras_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_satelites_muestras_excelentes" />

        <TextView
            android:id="@+id/total_satelites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_satelites_muestas" />

        <TextView
            android:id="@+id/porcentaje_satelites_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_satelites_muestras_malas" />

        <TextView
            android:id="@+id/porcentaje_satelites_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_satelites_muestras_buenas" />

        <TextView
            android:id="@+id/porcentaje_satelites_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_satelites_muestras_excelentes" />

        <TextView
            android:id="@+id/proveedor_gps_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor_gps_muestas_malas" />

        <TextView
            android:id="@+id/proveedor_network_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor_newtork_muestras_malas" />

        <TextView
            android:id="@+id/proveedor_gps_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor_gps_muestras_buenas" />

        <TextView
            android:id="@+id/proveedor_network_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor_network_muestras_buenas" />

        <TextView
            android:id="@+id/proveedor_gps_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor_gps_muestras_excelentes" />

        <TextView
            android:id="@+id/proveedor_network_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor_network_muestras_excelentes" />

        <TextView
            android:id="@+id/uso_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_gps" />

        <TextView
            android:id="@+id/uso_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_network" />

        <TextView
            android:id="@+id/porcentaje_gps_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_gps_muestras_malas" />

        <TextView
            android:id="@+id/porcentaje_network_malas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_network_muestras_malas" />

        <TextView
            android:id="@+id/porcentaje_gps_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_gps_muestras_buenas" />

        <TextView
            android:id="@+id/porcentaje_network_buenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_network_muestras_buenas" />

        <TextView
            android:id="@+id/porcentaje_gps_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_gps_muestras_excelentes" />

        <TextView
            android:id="@+id/porcentaje_network_excelentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_network_muestras_excelentes" />

    </LinearLayout>

</ScrollView>