<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetalleMuestra" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="224dp"
            android:layout_height="224dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/latitud_muestra"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="@string/latitud" />

        <TextView
            android:id="@+id/longitud_muestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud" />

        <TextView
            android:id="@+id/calificacion_muestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calificacion" />

        <TextView
            android:id="@+id/error_muestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error" />

        <TextView
            android:id="@+id/satelites_muestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satelites" />

        <TextView
            android:id="@+id/proveedor_muestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedor" />

    </LinearLayout>

</RelativeLayout>